Refactor subscription management and enhance Iyzico integration with new models, migrations, and services

--- a/.github/ISSUE_TEMPLATE/1_Bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1_Bug_report.yml
@@ -3,7 +3,7 @@ description: "Report something that's broken."
 body:
   - type: markdown
     attributes:
-      value: "Please read [our full contribution guide](https://laravel.com/docs/contributions#bug-reports) before submitting bug reports. If you notice improper DocBlock, PHPStan, or IDE warnings while using Codenteq, do not create a GitHub issue. Instead, please submit a pull request to fix the problem."
+      value: "Please read [our full contribution guide](https://codenteq.com/contributor-covenant-code-of-conduct/) before submitting bug reports. If you notice improper DocBlock, PHPStan, or IDE warnings while using Codenteq, do not create a GitHub issue. Instead, please submit a pull request to fix the problem."
   - type: input
     attributes:
       label: Codenteq Iyzico Version
@@ -14,7 +14,7 @@ body:
   - type: input
     attributes:
       label: Codenteq Version
-      description: Provide the Codenteq version that you are using. [Please ensure it is still supported.](https://laravel.com/docs/releases#support-policy)
+      description: Provide the Codenteq version that you are using. [Please ensure it is still supported.](https://codenteq.com/contributor-covenant-code-of-conduct/)
       placeholder: Version
     validations:
       required: true
